# vscode-container-remote

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
